Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/lambdaExpression/InvalidExpression6.out
InvalidExpression6.java:16:30: compiler.err.break.outside.switch.loop
InvalidExpression6.java:17:26: compiler.err.cont.outside.loop
2 errors
